# voxel-rt-renderer

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  helper.sh  meson.build  meson.options
kernels/: debug.cl  debug.clhpp  environment_map.cl  environment_map.clhpp  intersect.cl  intersect.clhpp  marching.cl  marching.clhpp  renderer.cl  renderer.clcpp  sample.cl  sample.clhpp  shader.cl  shader.clhpp  signed_distance_field.cl  signed_distance_field.clcpp
src/: camera.hpp  environment.hpp  frame.hpp  main.cpp  precomputer.hpp  renderer.hpp  state.hpp  voxel_block.hpp
src/io/: image.cpp  image.hpp  image_loader.cpp  image_loader.hpp  nrrd_loader.cpp  nrrd_loader.hpp  volume_block.cpp  volume_block.hpp
subprojects/: .gitignore
